--- a/patterns/index.html
+++ b/patterns/index.html
@@ -173,7 +173,7 @@ Design patterns are a great way to describe some of the culture and 'tribal know
 Design patterns are very language-specific - what is a pattern in one language may be unnecessary in another due to a language feature, or impossible to express due to a missing feature.</p>
 <p>If overused, design patterns can add unnecessary complexity to programs. However, they are a great way to share intermediate and advanced level knowledge about a programming language.</p>
 <h2><a class="header" href="#design-patterns-in-rust" id="design-patterns-in-rust">Design patterns in Rust</a></h2>
-<p>Rust has many very unique features. These features give us great benefit by removing whole classes of problems. For more about this, read why <a href="/rust_rocks.html">Rust rocks</a>! Some of them are also patterns that are <em>unique</em> to Rust.</p>
+<p>Rust has many very unique features. These features give us great benefit by removing whole classes of problems. Some of them are also patterns that are <em>unique</em> to Rust.</p>
 <h2><a class="header" href="#yagni" id="yagni">YAGNI</a></h2>
 <p>If you're not familiar with it, YAGNI is an acronym that stands for <code>You Aren't Going to Need It</code>. It's an important software design principle to apply as you write code.</p>
 <blockquote>
