--- a/patterns/fold.html
+++ b/patterns/fold.html
@@ -175,10 +175,7 @@ thus creating a whole new collection.</p>
 in the Rust compiler, although it appears to me to be more like a map than a
 fold in the usual sense. See the discussion below for more details.</p>
 <h2><a class="header" href="#example" id="example">Example</a></h2>
-<pre><pre class="playground"><code class="language-rust edition2018">
-<span class="boring">#![allow(unused)]
-</span><span class="boring">fn main() {
-</span>// The data we will fold, a simple AST.
+<pre><code class="language-rust ignore">// The data we will fold, a simple AST.
 mod ast {
     pub enum Stmt {
         Expr(Box&lt;Expr&gt;),
@@ -226,8 +223,7 @@ impl Folder for Renamer {
     }
     // Use the default methods for the other nodes.
 }
-<span class="boring">}
-</span></code></pre></pre>
+</code></pre>
 <p>The result of running the <code>Renamer</code> on an AST is a new AST identical to the old
 one, but with every name changed to <code>foo</code>. A real life folder might have some
 state preserved between nodes in the struct itself.</p>
