--- a/patterns/visitor.html
+++ b/patterns/visitor.html
@@ -176,10 +176,7 @@ behaviour).</p>
 <p>Furthermore, the visitor pattern allows separating the traversal of
 a collection of objects from the operations performed on each object.</p>
 <h2><a class="header" href="#example" id="example">Example</a></h2>
-<pre><pre class="playground"><code class="language-rust edition2018">
-<span class="boring">#![allow(unused)]
-</span><span class="boring">fn main() {
-</span>// The data we will visit
+<pre><code class="language-rust ignore">// The data we will visit
 mod ast {
     pub enum Stmt {
         Expr(Expr),
@@ -230,8 +227,7 @@ impl Visitor&lt;i64&gt; for Interpreter {
         }
     }
 }
-<span class="boring">}
-</span></code></pre></pre>
+</code></pre>
 <p>One could implement further visitors, for example a type checker, without having
 to modify the AST data.</p>
 <h2><a class="header" href="#motivation" id="motivation">Motivation</a></h2>
@@ -245,10 +241,7 @@ example). In that case it is possible to factor out the traversal code and share
 it between algorithms (and also to provide noop default methods). In Rust, the
 common way to do this is to provide <code>walk_*</code> functions for each datum. For
 example,</p>
-<pre><pre class="playground"><code class="language-rust edition2018">
-<span class="boring">#![allow(unused)]
-</span><span class="boring">fn main() {
-</span>pub fn walk_expr(visitor: &amp;mut Visitor, e: &amp;Expr) {
+<pre><code class="language-rust ignore">pub fn walk_expr(visitor: &amp;mut Visitor, e: &amp;Expr) {
     match *e {
         Expr::IntLit(_) =&gt; {},
         Expr::Add(ref lhs, ref rhs) =&gt; {
@@ -261,8 +254,7 @@ example,</p>
         }
     }
 }
-<span class="boring">}
-</span></code></pre></pre>
+</code></pre>
 <p>In other languages (e.g., Java) it is common for data to have an <code>accept</code> method
 which performs the same duty.</p>
 <h2><a class="header" href="#see-also" id="see-also">See also</a></h2>
