deploy: 5846281ee4c3cc437f6fedef63e360dc1d48a539

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 <p>There are many problems that share the same form. Due to the fact that Rust is not object-oriented design patterns vary with respect to other object-oriented programming languages. While the details are different, since they have the same form they can be solved using the same fundamental methods. </p>
 <p><a href="patterns/README.html">Design patterns</a> are methods to solve common problems when writing software.</p>
 <p><a href="anti_patterns/README.html">Anti-patterns</a> are methods to solve these same common problems. </p>
-<p>However, while design patterns give us benefits, anti-patterns create more problems. There are some problems that we don't need to solve because <a href="rust_rocks.html">Rust rocks</a>! </p>
+<p>However, while design patterns give us benefits, anti-patterns create more problems.</p>
 <p><a href="idioms/README.html">Idioms</a> are guidelines to follow when coding. They are social norms of the community. 
 You can break them, but if you do you should have a good reason for it. </p>
 <p><a href="refactoring/README.html">Refactoring</a> is the process by which you convert code that works, but is hard to understand, into code that works and is easy to understand.</p>
