--- a/index.html
+++ b/index.html
@@ -172,12 +172,12 @@
 <p>When developing programs, we have to solve many problems. A program can be viewed as a solution to a problem. It can also be viewed as a collection of solutions to many different problems. All of these solutions work together to solve a bigger problem.</p>
 <h2><a class="header" href="#design-patterns-in-rust" id="design-patterns-in-rust">Design patterns in Rust</a></h2>
 <p>There are many problems that share the same form. Due to the fact that Rust is not object-oriented design patterns vary with respect to other object-oriented programming languages. While the details are different, since they have the same form they can be solved using the same fundamental methods. </p>
-<p><a href="patterns/README.html">Design patterns</a> are methods to solve common problems when writing software.</p>
-<p><a href="anti_patterns/README.html">Anti-patterns</a> are methods to solve these same common problems. </p>
+<p><a href="./patterns/README.html">Design patterns</a> are methods to solve common problems when writing software.</p>
+<p><a href="./anti_patterns/README.html">Anti-patterns</a> are methods to solve these same common problems. </p>
 <p>However, while design patterns give us benefits, anti-patterns create more problems.</p>
-<p><a href="idioms/README.html">Idioms</a> are guidelines to follow when coding. They are social norms of the community. 
+<p><a href="./idioms/README.html">Idioms</a> are guidelines to follow when coding. They are social norms of the community. 
 You can break them, but if you do you should have a good reason for it. </p>
-<p><a href="refactoring/README.html">Refactoring</a> is the process by which you convert code that works, but is hard to understand, into code that works and is easy to understand.</p>
+<p><a href="./refactoring/README.html">Refactoring</a> is the process by which you convert code that works, but is hard to understand, into code that works and is easy to understand.</p>
 <p>TODO: Mention why Rust is a bit special - functional elements, type system, borrow checker</p>
 
                     </main>
