deploy: 2bc728d1d369052916a3168b00b96a027eaab9f3

--- a/print.html
+++ b/print.html
@@ -946,7 +946,7 @@ fn baz(a: &amp;mut A) {
 <span class="boring">}
 </span></code></pre></pre>
 <h2><a class="header" href="#motivation-6" id="motivation-6">Motivation</a></h2>
-<p>Why and where you should use the pattern</p>
+<p>TODO Why and where you should use the pattern</p>
 <h2><a class="header" href="#advantages-9" id="advantages-9">Advantages</a></h2>
 <p>Lets you work around limitations in the borrow checker.</p>
 <p>Often produces a better design.</p>
