--- a/patterns/compose-structs.html
+++ b/patterns/compose-structs.html
@@ -227,7 +227,7 @@ fn baz(a: &amp;mut A) {
 <span class="boring">}
 </span></code></pre></pre>
 <h2><a class="header" href="#motivation" id="motivation">Motivation</a></h2>
-<p>Why and where you should use the pattern</p>
+<p>TODO Why and where you should use the pattern</p>
 <h2><a class="header" href="#advantages" id="advantages">Advantages</a></h2>
 <p>Lets you work around limitations in the borrow checker.</p>
 <p>Often produces a better design.</p>
