--- a/print.html
+++ b/print.html
@@ -519,13 +519,17 @@ to declare multiple variables to bind differently-typed objects. To extend the
 lifetime as necessary, we can use deferred conditional initialization, as seen
 below:</p>
 <h2><a class="header" href="#example-6" id="example-6">Example</a></h2>
-<pre><code class="language-rust ignore">std::io::File;
+<pre><pre class="playground"><code class="language-rust edition2018">use std::io;
+use std::fs;
 
+<span class="boring">fn main() -&gt; Result&lt;(), Box&lt;dyn std::error::Error&gt;&gt; {
+</span><span class="boring">let arg = &quot;-&quot;;
+</span>
 // These must live longer than `readable`, and thus are declared first:
 let (mut stdin_read, mut file_read);
 
 // We need to ascribe the type to get dynamic dispatch.
-let readable: &amp;mut dyn io::Read = if arg == '-' {
+let readable: &amp;mut dyn io::Read = if arg == &quot;-&quot; {
     stdin_read = io::stdin();
     &amp;mut stdin_read
 } else {
@@ -534,7 +538,10 @@ let readable: &amp;mut dyn io::Read = if arg == '-' {
 };
 
 // Read from `readable` here.
-</code></pre>
+
+<span class="boring">Ok(())
+</span><span class="boring">}
+</span></code></pre></pre>
 <h2><a class="header" href="#motivation-3" id="motivation-3">Motivation</a></h2>
 <p>Rust monomorphises code by default. This means a copy of the code will be
 generated for each type it is used with and optimized independently. While this
