--- a/patterns/builder.html
+++ b/patterns/builder.html
@@ -169,45 +169,54 @@
                     <main>
                         <h1><a class="header" href="#builder" id="builder">Builder</a></h1>
 <h2><a class="header" href="#description" id="description">Description</a></h2>
-<p>Construct an object with calls to a builder helper. </p>
+<p>Construct an object with calls to a builder helper.</p>
 <h2><a class="header" href="#example" id="example">Example</a></h2>
-<pre><code class="language-rust ignore">struct Foo {
+<pre><pre class="playground"><code class="language-rust edition2018">
+<span class="boring">#![allow(unused)]
+</span><span class="boring">fn main() {
+</span>#[derive(Debug, PartialEq)]
+pub struct Foo {
     // Lots of complicated fields.
+    bar: String,
 }
 
-struct FooBuilder {
+pub struct FooBuilder {
     // Probably lots of optional fields.
-    //..
+    bar: String,
 }
 
 impl FooBuilder {
-    fn new(
-        //..
-    ) -&gt; FooBuilder {
+    pub fn new(/* ... */) -&gt; FooBuilder {
         // Set the minimally required fields of Foo.
+        FooBuilder {
+            bar: String::from(&quot;X&quot;),
+        }
     }
 
-    fn named(mut self, name: &amp;str) -&gt; FooBuilder {
+    pub fn name(mut self, bar: String) -&gt; FooBuilder {
         // Set the name on the builder itself, and return the builder by value.
+        self.bar = bar;
+        self
     }
-
-    // More methods that take `mut self` and return `FooBuilder` setting up
-    // various aspects of a Foo.
-    ...
 
     // If we can get away with not consuming the Builder here, that is an
-    // advantage. It means we can use the builder as a template for constructing
-    // many Foos.
-    fn finish(&amp;self) -&gt; Foo {
+    // advantage. It means we can use the FooBuilder as a template for constructing many Foos.
+    pub fn build(self) -&gt; Foo {
         // Create a Foo from the FooBuilder, applying all settings in FooBuilder to Foo.
+        Foo { bar: self.bar }
     }
 }
 
-fn main() {
-    let f = FooBuilder::new().named(&quot;Bar&quot;).with_attribute(...).finish();
+#[test]
+fn builder_test() {
+    let foo = Foo {
+        bar: String::from(&quot;Y&quot;),
+    };
+    let foo_from_builder: Foo = FooBuilder::new().name(String::from(&quot;Y&quot;)).build();
+    assert_eq!(foo, foo_from_builder);
 }
-
-</code></pre>
+<span class="boring">}
+</span></code></pre></pre>
 <h2><a class="header" href="#motivation" id="motivation">Motivation</a></h2>
 <p>Useful when you would otherwise require many different constructors or where
 construction has side effects.</p>
@@ -236,9 +245,9 @@ one can write code like</p>
 <pre><code class="language-rust ignore">let mut fb = FooBuilder::new();
 fb.a();
 fb.b();
-let f = fb.finish();
+let f = fb.build();
 </code></pre>
-<p>as well as the <code>FooBuilder::new().a().b().finish()</code> style.</p>
+<p>as well as the <code>FooBuilder::new().a().b().build()</code> style.</p>
 <h2><a class="header" href="#see-also" id="see-also">See also</a></h2>
 <p><a href="https://doc.rust-lang.org/1.0.0/style/ownership/builders.html">Description in the style guide</a></p>
 <p><a href="https://crates.io/crates/derive_builder">derive_builder</a>, a crate for automatically implementing this pattern while avoiding the boilerplate.</p>
