deploy: 450bf218dcf6db9bc1fc617e6e4bab767ce2b29a

--- a/print.html
+++ b/print.html
@@ -1167,6 +1167,7 @@ most common uses, but they can be used for other reasons:</p>
 <p><a href="https://doc.rust-lang.org/1.0.0/style/features/types/newtype.html">Newtypes in the style guide</a>.</p>
 <p><a href="https://wiki.haskell.org/Newtype">Newtypes in Haskell</a></p>
 <p><a href="https://doc.rust-lang.org/stable/book/ch19-04-advanced-types.html#creating-type-synonyms-with-type-aliases">Type aliases</a></p>
+<p><a href="https://crates.io/crates/derive_more">derive_more</a>, a crate for deriving many builtin traits on newtypes.</p>
 <h1><a class="header" href="#raii-with-guards" id="raii-with-guards">RAII with guards</a></h1>
 <h2><a class="header" href="#description-16" id="description-16">Description</a></h2>
 <p><a href="https://en.wikipedia.org/wiki/Resource_Acquisition_Is_Initialization">RAII</a> stands for &quot;Resource Acquisition is Initialisation&quot; which is a terrible
