--- a/patterns/newtype.html
+++ b/patterns/newtype.html
@@ -243,6 +243,7 @@ most common uses, but they can be used for other reasons:</p>
 <p><a href="https://doc.rust-lang.org/1.0.0/style/features/types/newtype.html">Newtypes in the style guide</a>.</p>
 <p><a href="https://wiki.haskell.org/Newtype">Newtypes in Haskell</a></p>
 <p><a href="https://doc.rust-lang.org/stable/book/ch19-04-advanced-types.html#creating-type-synonyms-with-type-aliases">Type aliases</a></p>
+<p><a href="https://crates.io/crates/derive_more">derive_more</a>, a crate for deriving many builtin traits on newtypes.</p>
 
                     </main>
 
