deploy: 7ac0b4f79db2c8c769dfaea7b6ed9981fc87eef6

--- a/print.html
+++ b/print.html
@@ -1169,6 +1169,7 @@ most common uses, but they can be used for other reasons:</p>
 <li><a href="https://wiki.haskell.org/Newtype">Newtypes in Haskell</a></li>
 <li><a href="https://doc.rust-lang.org/stable/book/ch19-04-advanced-types.html#creating-type-synonyms-with-type-aliases">Type aliases</a></li>
 <li><a href="https://crates.io/crates/derive_more">derive_more</a>, a crate for deriving many builtin traits on newtypes.</li>
+<li><a href="https://www.worthe-it.co.za/blog/2020-10-31-newtype-pattern-in-rust.html">The Newtype Pattern In Rust</a></li>
 </ul>
 <h1><a class="header" href="#raii-with-guards" id="raii-with-guards">RAII with guards</a></h1>
 <h2><a class="header" href="#description-16" id="description-16">Description</a></h2>
